<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RFLedFlash</string>
    <string name="create_account">Create account</string>
    <string name="fogot_your_password">fogot your password?</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in_with_email">Log in with email</string>
    <string name="delete">Delete</string>
    <string name="create_account_with_email">Create account with email</string>
    <string name="name">Name</string>
    <string name="password_again">Password again</string>
    <string name="verification_code">Verification code</string>
    <string name="get_code">Get code</string>
    <string name="godox_light_privacy_policy">Godox Light Privacy Policy</string>
    <string name="login_in">Login in</string>
    <string name="retrieve_password">Retrieve password</string>
    <string name="device_connect">Device connection</string>
    <string name="album">Album</string>
    <string name="grid">Grid</string>
    <string name="noun_scan">Picture scale</string>
    <string name="account_mange">Account management</string>
    <string name="clear_cache">Clear cache</string>
    <string name="connect">Connect</string>
    <string name="remove">Remove</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="application_authority">Authority application</string>
    <string name="concel">Concel</string>
    <string name="to_setting">To set up</string>
    <string name="login_success">Login successful</string>
    <string name="input_null">The input is empty</string>
    <string name="all_photo">All pictures</string>
    <string name="repet_request">Please do not repeat the request</string>
    <string name="email_not_null">Mailbox cannot be empty</string>
    <string name="has_sent">has been sent</string>
    <string name="code_has_sent">The verification code has been sent to the mailbox</string>
    <string name="regeist_success">Login was successful</string>
    <string name="register_fail">Login has failed</string>
    <string name="please_agree_agreement">Please agree to the agreement</string>
    <string name="input_identical">The input passwords are inconsistent</string>
    <string name="input_not_nulll">Input content cannot be empty</string>
    <string name="please_not_repet">Please do not repeat the request</string>
    <string name="code_has_sent_email">The verification code has been sent to the mailbox</string>
    <string name="modified_successfully">Modified successfully</string>
    <string name="modified_fail">Modification failed</string>
    <string name="modified_diffrent">The input passwords are inconsistent</string>
    <string name="cleanning">Cleaning up</string>
    <string name="clean_success">Clean up successful</string>
    <string name="setting">Setting</string>
    <string name="center">Central point</string>
    <string name="gridd">Square</string>
    <string name="nulll">Nothing</string>
    <string name="duijiaoxian">Diagonal</string>
    <string name="add">Add</string>
    <string name="scanning">Scanning</string>
    <string name="add_failed">Add failed</string>
    <string name="adding">Succeed...</string>
    <string name="add_success">Add succeed</string>
    <string name="i_agree_to">I agree to</string>
    <string name="close">Close</string>
    <string name="permission_need_set">The application is running without necessary permissions. Please go to the settings page to open it</string>
    <string name="lang_select">Language choice</string>
    <string name="cn">Chinese</string>
    <string name="en">English</string>
    <string name="version_update">Software version update</string>
    <string name="isupdate">Currently, it is an operator network. Do you want to upgrade?</string>
    <string name="immediately_update">Update now</string>
    <string name="removing">Removing...</string>
    <string name="aboutrf1">About RF1</string>
    <string name="app_agreement">《Software license and service agreement》</string>
    <string name="version">Version v</string>
    <string name="SimplifiedChinese">Simplified Chinese</string>
    <string name="followingsystem">Following System</string>
    <string name="firmwareupdate">Firmware update</string>
    <string name="update_new_version">Upgrade to new version</string>
    <string name="Firmware_update">Firmware Update</string>
    <string name="Device_firmware_version">Device firmware version：</string>
    <string name="Start_the_upgrade">Start the upgrade</string>
    <string name="new_version_tip">There is a new version to upgrade, a new version：</string>
    <string name="Upgrade_Complete">Upgrade Complete</string>
    <string name="Upgrade_failed">Upgrade failed</string>
    <string name="Upgrade_progress">Upgrade progress：</string>
    <string name="Download_failed">Download failed</string>
    <string name="Start_downloading">Start downloading</string>
    <string name="Downloading">Downloading：</string>
    <string name="Upgrade_file_error">Upgrade file error</string>
    <string name="No_equipment">No equipment</string>
    <string name="no_online_device">No online device</string>
</resources>

