<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="88dp"
        android:text="@string/create_account_with_email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="27dp"
        android:hint="@string/email_address"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="27dp"
        android:hint="@string/name"
        android:textSize="14sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="29dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="14sp"/>

        <ImageButton
            android:id="@+id/ibtn_eye1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/selecter_eye"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="29dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_again"
            android:textSize="14sp"/>

        <ImageButton
            android:id="@+id/ibtn_eye2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/selecter_eye"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="27dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_gravity="right|center_vertical"
            android:text="@string/get_code"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selecter_check" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_to"
            android:layout_marginLeft="10dp"
            android:textColor="#C4C4C4"/>

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/godox_light_privacy_policy"
            android:textColor="@android:color/black"
            android:layout_marginLeft="5dp"
            android:textSize="14dp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ibtn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/register" />
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_in"
        android:textSize="14sp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>