<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/rf1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="56dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_email"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="103dp"
        android:textStyle="bold"
        android:layout_marginLeft="59dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="19dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/email"
            android:layout_marginLeft="28dp"
            android:layout_gravity="center_vertical"
           />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="27dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:layout_gravity="bottom"
            android:hint="@string/email_address"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginRight="27dp"
        android:layout_marginLeft="28dp"
        android:gravity="bottom">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/password"
            android:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/password"/>
        <ImageButton
            android:id="@+id/ibtn_eye"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/selecter_eye"
            android:layout_gravity="right|center_vertical"/>
    </FrameLayout>
    <TextView
        android:id="@+id/iv_modify_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fogot_your_password"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        />
    <ImageButton
        android:id="@+id/ibtn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/login"
        android:layout_marginTop="58dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/ibtn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>