<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    tools:context=".SettingActivity">

    <FrameLayout
        android:id="@+id/fl_connect"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/device_connect"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_album"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/album"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_grid"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/grid"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="15dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_scale"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/noun_scan"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="15dp"
            android:text="4:3"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_account"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/account_mange"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_language"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lang_select"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/right" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="35dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_clear"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/clear_cache"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="15dp"
            android:src="@mipmap/right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_update"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/firmwareupdate"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_about"
        android:layout_width="match_parent"
        android:layout_height="54dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/aboutrf1"
            android:textColor="#ff000000"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:src="@mipmap/right" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:background="@color/line" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="80dp"
            android:background="@drawable/shape_logout"
            android:paddingLeft="55dp"
            android:paddingTop="8dp"
            android:paddingRight="55dp"
            android:paddingBottom="8dp"
            android:text="退出登录"
            android:layout_marginRight="15dp"
            android:textColor="@color/white" />
    </FrameLayout>

</LinearLayout>